--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
     <artifactId>log4j-core</artifactId>
     <version>2.11.1</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.8</version>
+    <scope>provided</scope>
+</dependency>
 
   </dependencies>
 </project>
